The system is solved in a training set. So the ratio must be calculated using the number of equations in the training set.

--- a/eda_movie_lens_solvability.ipynb
+++ b/eda_movie_lens_solvability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "67f30fd9",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "c361773e",
    "metadata": {},
    "outputs": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "66bd384c",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "id": "37eb633a",
    "metadata": {},
    "outputs": [
@@ -79,8 +79,8 @@
      "output_type": "stream",
      "text": [
       "Potential number of unknown embeddings variables:  7322579\n",
-      "Total number of equations in the system:           27753444\n",
-      "The ratio of equations to unknowns:                3.7901187546081783\n"
+      "Total number of equations in the system:           22202755\n",
+      "The ratio of equations to unknowns:                3.0320949763737612\n"
      ]
     }
    ],
@@ -89,9 +89,12 @@
     "# this gives the total number of unknown variables in the system.\n",
     "system_unknowns = user_count*user_embeddings_dimension + movie_count*movie_embeddings_dimension\n",
     "\n",
+    "# Assuming we use 80% of the data for training, the number of equations we will have is:\n",
+    "system_equations = round(0.8*rating_count)\n",
+    "\n",
     "print(\"Potential number of unknown embeddings variables: \", system_unknowns)\n",
-    "print(\"Total number of equations in the system:          \", rating_count)\n",
-    "print(\"The ratio of equations to unknowns:               \", rating_count/system_unknowns)"
+    "print(\"Total number of equations in the system:          \", system_equations)\n",
+    "print(\"The ratio of equations to unknowns:               \", system_equations/system_unknowns)"
    ]
   },
   {
