Shortens function names.

--- a/eda_movie_lens_solvability.ipynb
+++ b/eda_movie_lens_solvability.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "67f30fd9",
    "metadata": {},
    "outputs": [],
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "c361773e",
    "metadata": {},
    "outputs": [
@@ -31,9 +31,9 @@
    "source": [
     "ratings = dataset.Ratings()\n",
     "\n",
-    "all_ratings = ratings.DataFrame()\n",
-    "unique_users = all_ratings[ratings.UserIdColumnName()].unique()\n",
-    "unique_movies = all_ratings[ratings.MovieIdColumnName()].unique()\n",
+    "all_ratings = ratings.Data()\n",
+    "unique_users = all_ratings[ratings.UserId()].unique()\n",
+    "unique_movies = all_ratings[ratings.MovieId()].unique()\n",
     "\n",
     "user_count = unique_users.shape[0]\n",
     "movie_count = unique_movies.shape[0]\n",
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 8,
    "id": "66bd384c",
    "metadata": {},
    "outputs": [
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "id": "37eb633a",
    "metadata": {},
    "outputs": [
