Adds a print message besides the pearson correlation coefficients.

--- a/eda_movie_lens_modes_and_distributions.ipynb
+++ b/eda_movie_lens_modes_and_distributions.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "5e81931e",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 13,
    "id": "fd563855",
    "metadata": {},
    "outputs": [],
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "id": "d3611b3e",
    "metadata": {},
    "outputs": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "id": "ea64a7b1",
    "metadata": {},
    "outputs": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 16,
    "id": "c15b1737",
    "metadata": {},
    "outputs": [
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 17,
    "id": "d717d7d5",
    "metadata": {},
    "outputs": [
@@ -149,25 +149,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 23,
    "id": "d5c9ca38",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "array([[1.        , 0.11183026],\n",
-       "       [0.11183026, 1.        ]])"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "rating vs engagement Pearson correlation coefficients: \n",
+      " [[1.         0.11183026]\n",
+      " [0.11183026 1.        ]]\n"
+     ]
     }
    ],
    "source": [
     "# Checks if any relation between a movie's median rating and its engagement count.\n",
-    "movie_median_rating = groupby_movie_id[ratings_dataset.RatingColumnName()] \\\n",
+    "movie_median_rating = groupby_movie_id[ratings_dataset.Rating()] \\\n",
     "                            .median()                                      \\\n",
     "                            .rename(\"median_rating\")\n",
     "\n",
@@ -178,12 +176,14 @@
     "engagements = df_engagement_and_median_rating[\"engagement_count\"].to_numpy()\n",
     "ratings = df_engagement_and_median_rating[\"median_rating\"].to_numpy()\n",
     "\n",
-    "np.corrcoef(ratings, engagements)"
+    "corr_pearson = np.corrcoef(ratings, engagements)\n",
+    "\n",
+    "print(\"rating vs engagement Pearson correlation coefficients: \\n\", corr_pearson)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "1441a32a",
    "metadata": {},
    "outputs": [
