Updates the solvability EDA notebook with the new ingestion APIs.

--- a/src/notebooks/eda_mf_solvability.ipynb
+++ b/src/notebooks/eda_mf_solvability.ipynb
@@ -2,51 +2,93 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "id": "67f30fd9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from datasets.movie_lens import MovieLensDataset\n",
-    "\n",
-    "dataset = MovieLensDataset()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "c361773e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total number of users:    283228\n",
-      "Total number of movies:   53889\n",
-      "Total number of ratings:  27753444\n"
+      "22/10/25 15:58:55 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Setting default log level to \"WARN\".\n",
+      "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n"
      ]
     }
    ],
    "source": [
-    "ratings = dataset.Ratings()\n",
+    "import sys\n",
     "\n",
-    "all_ratings = ratings.Data()\n",
-    "unique_users = all_ratings[ratings.UserId()].unique()\n",
-    "unique_movies = all_ratings[ratings.MovieId()].unique()\n",
+    "sys.path.append(\"../../\")\n",
     "\n",
-    "user_count = unique_users.shape[0]\n",
-    "movie_count = unique_movies.shape[0]\n",
-    "rating_count = all_ratings.shape[0]\n",
+    "from src.ingestion.database.reader import *\n",
     "\n",
-    "print(\"Total number of users:   \", user_count)\n",
-    "print(\"Total number of movies:  \", movie_count)\n",
+    "reader = IngestionReader(db_host=\"127.0.0.1\", \n",
+    "                         db_user=\"daviswen\", \n",
+    "                         db_password=\"davis\",\n",
+    "                         jdbc_driver_path=\"../../third_party/postgresql-42.5.0.jar\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "c361773e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Stage 72:>                                                         (0 + 1) / 1]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of users: active_user=283228 total=283228\n",
+      "Total number of contents: rated_content=53889 total=58098\n",
+      "Total number of ratings:  27753444\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "users = ReadUsers(reader)\n",
+    "contents = ReadContents(reader)\n",
+    "ratings = ReadRatingFeedbacks(reader)\n",
+    "\n",
+    "all_users = users.select([\"id\"])\n",
+    "all_contents = contents.select([\"id\"])\n",
+    "active_users = ratings.select([\"user_id\"]).distinct()\n",
+    "rated_contents = ratings.select([\"content_id\"]).distinct()\n",
+    "\n",
+    "total_user_count = all_users.count()\n",
+    "active_user_count = active_users.count()\n",
+    "total_content_count = all_contents.count()\n",
+    "rated_content_count = rated_contents.count()\n",
+    "rating_count = ratings.count()\n",
+    "\n",
+    "print(\"Total number of users: active_user={0} total={1}\".format(active_user_count, total_user_count))\n",
+    "print(\"Total number of contents: rated_content={0} total={1}\".format(rated_content_count, total_content_count))\n",
     "print(\"Total number of ratings: \", rating_count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
    "id": "66bd384c",
    "metadata": {},
    "outputs": [
@@ -61,8 +103,8 @@
    ],
    "source": [
     "# Potential embeddings dimension based on the empirical ruleo of 4th root.\n",
-    "user_embeddings_dimension = round(pow(user_count, 1.0/4.0))\n",
-    "movie_embeddings_dimension = round(pow(movie_count, 1.0/4.0))\n",
+    "user_embeddings_dimension = round(pow(active_user_count, 1.0/4.0))\n",
+    "movie_embeddings_dimension = round(pow(rated_content_count, 1.0/4.0))\n",
     "\n",
     "print(\"Potential user embeddings dimension:  \", user_embeddings_dimension)\n",
     "print(\"Potential movie embeddings dimension: \", movie_embeddings_dimension)"
@@ -70,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "id": "37eb633a",
    "metadata": {},
    "outputs": [
@@ -87,7 +129,7 @@
    "source": [
     "# Assuming that movie features have to come entirely from a model, \n",
     "# this gives the total number of unknown variables in the system.\n",
-    "system_unknowns = user_count*user_embeddings_dimension + movie_count*movie_embeddings_dimension\n",
+    "system_unknowns = active_user_count*user_embeddings_dimension + rated_content_count*movie_embeddings_dimension\n",
     "\n",
     "# Assuming we use 80% of the data for training, the number of equations we will have is:\n",
     "system_equations = round(0.8*rating_count)\n",
@@ -96,14 +138,6 @@
     "print(\"Total number of equations in the system:          \", system_equations)\n",
     "print(\"The ratio of equations to unknowns:               \", system_equations/system_unknowns)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9bdaab89",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -122,7 +156,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.10.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
